--- a/SunShine.Web/Web.config
+++ b/SunShine.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TN" connectionString="data source=YBQT\MSSQLSERVER1;initial catalog=SunshineSecond;persist security info=True;user id=sa;password=sa12345;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TN" connectionString="data source=112.74.189.7;initial catalog=SunshineSecond;persist security info=True;user id=sa;password=Cyyg85587586;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
