--- a/SunShine.Web/SunShine.Web.csproj
+++ b/SunShine.Web/SunShine.Web.csproj
@@ -394,6 +394,7 @@
     <Content Include="Images\home\honor.jpg" />
     <Content Include="Images\home\hot_phone_icon.jpg" />
     <Content Include="Images\home\hot_tel_icon.jpg" />
+    <Content Include="Images\home\icon_friend_link.jpg" />
     <Content Include="Images\home\make_step.jpg" />
     <Content Include="Images\home\mobile_custom_flow.jpg" />
     <Content Include="Images\home\mobile_dingzhiliucheng_1_1.jpg" />
