--- a/SunShine.Web/SunShine.Web.csproj
+++ b/SunShine.Web/SunShine.Web.csproj
@@ -396,6 +396,9 @@
     <Content Include="Images\home\hot_tel_icon.jpg" />
     <Content Include="Images\home\icon_friend_link.jpg" />
     <Content Include="Images\home\make_step.jpg" />
+    <Content Include="Images\home\mobile_advance_content.jpg" />
+    <Content Include="Images\home\mobile_advance_img_1.jpg" />
+    <Content Include="Images\home\mobile_advance_img_2.jpg" />
     <Content Include="Images\home\mobile_custom_flow.jpg" />
     <Content Include="Images\home\mobile_dingzhiliucheng_1_1.jpg" />
     <Content Include="Images\home\mobile_dingzhiliucheng_1_2.jpg" />
@@ -1034,6 +1037,7 @@
     <Content Include="Views\Parts\Advantages.cshtml" />
     <Content Include="Views\Shared\_BookTitle.cshtml" />
     <Content Include="Views\Parts\DesignService.cshtml" />
+    <Content Include="Views\Parts\Mobile_CoreAdvance.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
