--- a/SunShine.Web/SunShine.Web.csproj
+++ b/SunShine.Web/SunShine.Web.csproj
@@ -399,6 +399,7 @@
     <Content Include="Images\home\mobile_advance_content.jpg" />
     <Content Include="Images\home\mobile_advance_img_1.jpg" />
     <Content Include="Images\home\mobile_advance_img_2.jpg" />
+    <Content Include="Images\home\mobile_advance_title.jpg" />
     <Content Include="Images\home\mobile_custom_flow.jpg" />
     <Content Include="Images\home\mobile_dingzhiliucheng_1_1.jpg" />
     <Content Include="Images\home\mobile_dingzhiliucheng_1_2.jpg" />
