--- a/SunShine.Web/SunShine.Web.csproj
+++ b/SunShine.Web/SunShine.Web.csproj
@@ -407,6 +407,7 @@
     <Content Include="Images\home\mobile_fuwubiaoyu_1.jpg" />
     <Content Include="Images\home\mobile_kehuzhichi_1.jpg" />
     <Content Include="Images\home\mobile_pinpaiyoushi_1.jpg" />
+    <Content Include="Images\home\mobile_show_case_title.jpg" />
     <Content Include="Images\home\mobile_yongxinzuofuwu.jpg" />
     <Content Include="Images\home\next_item_icon.jpg" />
     <Content Include="Images\home\pre_item_icon.jpg" />
